Fixed codeforces messaging being too bright and fixed the new test case feature being too dark

--- a/darktheme.css
+++ b/darktheme.css
@@ -458,6 +458,13 @@ td.dark span[style^="color: #0000bb;"] {
 .datatable td.state a[href$="standings"] {
     color: #8cc3f9 !important;
 }
+.problem-statement .test-example-line-even {
+    background-color: #2b2b2b; !important;
+}
+.usertalks tr.unread td {
+    background-color: #2b2b2b !important;
+}
+
 
 /* gym pages */
 div.setting-name {
